<resources>
    <string name="app_name">Learn Code Online</string>
    <string name="title">Learn Code Online</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="stay">Stay</string>
    <string name="here">Here</string>
    <string name="home">HOME</string>
    <string name="boy_s_pg">Boy\'s Pg</string>
    <string name="girl_s_pg">Girl\'s Pg</string>
    <string name="flat">Flat</string>
    <string name="hotel">Hotel</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="login_to_explore">login to explore</string>
    <string name="email">EMAIL</string>
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="confirm_password">Confirm password</string>
    <string name="learn_code_online">Learn Code Online</string>
</resources>
