<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent"
    tools:context=".signup">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="382dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logoOfTheApp"
                android:layout_width="@dimen/eighty"
                android:layout_height="@dimen/eighty"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="LOGO"
                android:src="@drawable/loginimage" />

            <LinearLayout
                android:id="@+id/root3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/sign_up"
                    android:hint="@string/first_name"
                    android:inputType="" android:paddingLeft="10dp"
                    android:paddingStart="10dp" android:textColorHint="@color/richBlack" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginLeft="@dimen/ten"
                    android:layout_weight="1"
                    android:background="@drawable/sign_up"
                    android:hint="@string/last_name"
                    android:inputType="" android:paddingLeft="10dp"
                    android:paddingStart="10dp" android:textColorHint="@color/richBlack" />


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/twenty"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/richBlack" />

            <EditText
                android:id="@+id/edt1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/twenty"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/richBlack" />

            <EditText
                android:id="@+id/edt2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/twenty"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/richBlack" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="99dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="SIGN UP"
        android:textColor="@color/richBlack"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.393" />


</android.support.constraint.ConstraintLayout>