<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/onesixty"
        android:background="@drawable/bg_login" />

    <LinearLayout
        android:id="@+id/root1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fifty"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/richBlack"
            android:textSize="@dimen/thirtysp"
            android:textStyle="italic" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black"
            android:text="@string/login_to_explore"
            android:textColor="@color/richBlack"
            android:textSize="@dimen/twenty"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/root2"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root1"
        android:layout_marginTop="@dimen/fifty"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:padding="15dp"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/logoOfTheApp"
                android:layout_width="@dimen/eighty"
                android:layout_height="@dimen/eighty"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/thirtytwo"
                android:src="@drawable/loginimage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginRight="@dimen/thirty"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginTop="@dimen/ten"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_username"
                    android:elevation="@dimen/five"
                    android:hint="@string/username"
                    android:paddingLeft="@dimen/ten"
                    android:textColorHint="@color/colorhint" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginTop="@dimen/twenty"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/security"
                    android:drawablePadding="@dimen/five"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/ten"
                    android:textColorHint="@color/colorhint" />

                <Button
                    android:id="@+id/singingIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty"
                    android:background="@drawable/button_bg"
                    android:drawableLeft="@drawable/ic_signin"
                    android:drawablePadding="@dimen/five"
                    android:fontFamily="sans-serif-condensed"
                    android:onClick="loginToMainActivity"
                    android:padding="@dimen/ten"
                    android:text="@string/login"
                    android:textColor="@color/richBlack"
                    android:textSize="@dimen/twenty" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty"
                    android:background="@drawable/sign_up"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_up"
                    android:textColor="@color/richBlack"
                    android:textSize="@dimen/twenty" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <ImageView
        android:id="@+id/googleimg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/root2"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:padding="10dp"
        android:src="@drawable/google"
        android:layout_marginStart="50dp" />
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/root2"
        android:elevation="5dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/googleimg"
        android:layout_alignParentBottom="true"
        android:src="@drawable/github"/>
</RelativeLayout>